# gurobi_python_wrap

./: CMakeLists.txt  FindGUROBI.cmake
include/: glpk-wrapper.hpp
src/: qpp.cpp
