cmake_minimum_required(VERSION 3.3)

project(qpp C)

option(CXX "enable C++ compilation" ON)
if(CXX)
    enable_language(CXX)
endif()

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

FIND_PACKAGE(PythonLibs 3.6 REQUIRED)
FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
FIND_PACKAGE(GUROBI REQUIRED)
FIND_PACKAGE(glpk REQUIRED)

SET(CMAKE_SHARED_MODULE_PREFIX "")

INCLUDE_DIRECTORIES(${GUROBI_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${glpk_INCLUDE_DIRS})

# Create the lib
ADD_LIBRARY(qpp MODULE src/qpp.cpp)

# Target_link_libraries(solveLP ${PYTHON_LIBRARIES})
TARGET_LINK_LIBRARIES(qpp ${PYTHON_LIBRARIES} ${GUROBI_LIBRARIES} ${Boost_LIBRARIES} ${glpk_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(qpp PRIVATE ${PYTHON_INCLUDE_DIRS})


